samples/_failures_safe/1761372302_c91068_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cf2629c8.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_cf2629c8.c:188:9: error: expected declaration or statement at end of input
  188 |         }
      |         ^
./samples/SAFE/__tmp_cf2629c8.c:188:9: error: expected declaration or statement at end of input
